--- a/login.html
+++ b/login.html
@@ -13,14 +13,14 @@
   <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
-    apiKey: "AIzaSyBl4zrlYIt0CEMR_rewlH61jFcVawXmh90",
-    authDomain: "caribfarms-92bec.firebaseapp.com",
-    projectId: "caribfarms-92bec",
-    storageBucket: "caribfarms-92bec.appspot.com",
-    messagingSenderId: "653078113364",
-    appId: "1:653078113364:web:def7d81d301c7ae8f1d1c1",
-    measurementId: "G-MDSHX3WFPH",
-    databaseURL: 'https://caribfarms-92bec.firebaseio.com'
+    apiKey: //enter your api key,
+    authDomain: //enter auth domain url,
+    projectId: //enter project id name,
+    storageBucket: //enter storage bucket name,
+    messagingSenderId: //enter sender id number,
+    appId: //enter the app id,
+    measurementId: //enter measurement id mentioned,
+    databaseURL: //enter the database url;
       };
 
       // Initialize Firebase
